css/nav_style.css
/*-----Style nav the buttons-----*/
.topnav {
  overflow: hidden;
  background-color: #FFD899;
}

.topnav .nav-brand {
  float: left;
    padding: 16px 18px;
}

.topnav .btn {
  float: left;
  color: black;
  text-align: center;
  padding: 18px 20px;
  text-decoration: none;
  font-size: 30px;
  margin-top: 25px;
}

.topnav a.btn:hover, .topnav a.nav-right-2:hover {
  background-color: #fcad26;
  color: black;
}

.topnav a.btn.active, .topnav a.nav-right-2.active{
  background-color: #fcad26;
  color: black;
}

.topnav a.nav-right-2, .topnav form.nav-form-right {
  float: right;
  text-align: center;
  text-decoration: none;
  padding: 18px 20px;
  margin-top: 25px;
  font-size: 30px;
}

.topnav a label.nav-menu{
      display: none;
  }

.topnav .icon {
  display: none;
  font-size: 50px;
  margin-top: 40px;
  margin-right: 10px;
}

.topnav a label #login{
    display: none;
}

.topnav a{
    background-color: #FFD899; 
}

#menu {
  font-size: 30px;
  margin-left: 5px;
  text-align: left;
  color: black;
}

.profile-logo {
    object-fit: cover;
    width: 3rem;
    height: 3rem;
    max-width: 100%;
    border-radius: 50%;
    margin: 1rem auto;
}

@media screen and (max-width: 600px) {
  .topnav a:not(:first-child) {display: none;}
  .topnav form:not(:first-child) {display: none;}

  .topnav a.icon {
    float: right;
    display: block;
    margin-top: 30px;
  }
  
  .topnav a img.logo{
      max-width: 80%;
  }
  .topnav a label.nav-menu{
      display: none;
  }
  
}

@media screen and (max-width: 600px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
      margin-top: 20px;
    float: none;
    display: block;
    text-align: left;
  }
  
  .topnav.responsive form{
      float: none;
      display: block;
      text-align: left;
  }
  .topnav.responsive a img.logo{
      display: none;
  }
  .topnav.responsive a label.nav-menu{
      display: block;
      font-size: 30px;
  }
}

@media screen and (max-width: 1120px) {
    .topnav a:not(:first-child) {display: none;}
  .topnav form:not(:first-child) {display: none;}

  .topnav a.icon {
    float: right;
    display: block;
  }
}

@media screen and (max-width: 1120px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
  
  .topnav.responsive form{
      float: none;
      display: block;
      text-align: left;
  }
}

